--- a/.github/workflows/build_loop.yml
+++ b/.github/workflows/build_loop.yml
@@ -28,6 +28,36 @@ jobs:
         uses: actions/checkout@v3
         with:
           submodules: recursive
+      # Customize Loop: Download and apply patches
+      - name: Customize Loop
+        run: | 
+
+          # The lines below add the customizations listed using the CustomizationSelect script
+          # The "\" is a continuation character 
+          #   the line following a "\" cannot be blank - that causes the Action to never complete
+          /bin/bash -c "$(curl -fsSL \
+          https://raw.githubusercontent.com/loopandlearn/lnl-scripts/main/CustomizationSelect.sh)" \
+          omnipod_cage \
+          dexcom_sage \
+          #dexcom_upload_readings \
+          #future_carbs_4h \
+          #low_carb_limit \
+          #high_carb_limit \
+          #no_auth \
+          #override_sens \
+          #limit_loop_cycle_time \
+          #lnl_icon \
+          customtypeone_looppatches \
+          2002 #\
+          #algorithm_experiments
+
+          # the final customization listed above CANNOT have a continuation character "\"
+          # more customizations can be pasted after this line
+          # Update icon to Angry Panda
+		  curl https://github.com/tornado14/LoopWorkspace/commit/dd3d27ee5ec064b345647008878376ac7dbe8148.patch | git apply -v 
+		  curl https://github.com/tornado14/LoopWorkspace/commit/87e60f83b46ee3051c0f29af434b85f34528296c.patch | git apply -v 
+		  curl https://github.com/tornado14/LoopWorkspace/commit/fcecf96790913e9202e7329c3d22f61af0022c25.patch | git apply -v 
+		  curl https://github.com/tornado14/LoopWorkspace/commit/c452c2047326b78c286a980b5cf0e18c32ac9db3.patch | git apply -v 
       
       # Patch Fastlane Match to not print tables
       - name: Patch Match Tables
