--- a/.github/workflows/build_loop.yml
+++ b/.github/workflows/build_loop.yml
@@ -39,26 +39,8 @@ jobs:
           https://raw.githubusercontent.com/loopandlearn/lnl-scripts/main/CustomizationSelect.sh)" \
           omnipod_cage \
           dexcom_sage \
-          #dexcom_upload_readings \
-          #future_carbs_4h \
-          #low_carb_limit \
-          #high_carb_limit \
-          #no_auth \
-          #override_sens \
-          #limit_loop_cycle_time \
-          #lnl_icon \
-          #customtypeone_looppatches \
-          2002 #\
-          #algorithm_experiments
-
-          # the final customization listed above CANNOT have a continuation character "\"
-          # more customizations can be pasted after this line
-          
-          # These next two patches must be combined together, do not apply one without the other
-          # This applies CustomTypeOne LoopPatches to released submodules Loop and LoopKit
-          # See: https://www.loopandlearn.org/custom-type-one-loop-patches
-          curl https://raw.githubusercontent.com/CustomTypeOne/LoopPatches/main/LoopPatch.txt | git apply --directory=Loop
-          curl https://raw.githubusercontent.com/CustomTypeOne/LoopPatches/main/LoopkitPatch.txt | git apply --directory=LoopKit
+          customtypeone_looppatches \
+          2002
           
           # Update icon to Angry Panda
           curl https://github.com/tornado14/LoopWorkspace/commit/dd3d27ee5ec064b345647008878376ac7dbe8148.patch | git apply -v 
