--- a/.github/workflows/build_loop.yml
+++ b/.github/workflows/build_loop.yml
@@ -277,6 +277,27 @@ jobs:
           # Several patches may be added per submodule.
           # Adding comments (#) may be useful to easily tell the individual patches apart.
 
+          # The lines below add the customizations listed using the CustomizationSelect script
+          # The "\" is a continuation character 
+          #   the line following a "\" should not be blank
+          /bin/bash -c "$(curl -fsSL \
+          https://raw.githubusercontent.com/loopandlearn/lnl-scripts/main/CustomizationSelect.sh)" \
+          now_line \
+          2002 \
+          basal_lock \
+          live_activity
+
+          # the final customization listed above CANNOT have a continuation character
+          # more customizations can be pasted after this line
+
+          # Update icon to Angry Panda
+          curl https://github.com/tornado14/LoopWorkspace/commit/dd3d27ee5ec064b345647008878376ac7dbe8148.patch | git apply -v # delete iphone icons
+          # old delete watch icon curl https://github.com/tornado14/LoopWorkspace/commit/87e60f83b46ee3051c0f29af434b85f34528296c.patch | git apply -v 
+          curl https://github.com/LoopKit/LoopWorkspace/commit/ba6af74f1b797d14582adf9af062e75f59bcf18e.patch | git apply -v # delete watch icons
+          curl https://github.com/tornado14/LoopWorkspace/commit/fcecf96790913e9202e7329c3d22f61af0022c25.patch | git apply -v # update iphone icons
+          #curl https://github.com/tornado14/LoopWorkspace/commit/c452c2047326b78c286a980b5cf0e18c32ac9db3.patch | git apply -v 
+          curl https://github.com/LoopKit/LoopWorkspace/commit/1726a45bb0a1ad8bc1a2867c0eba28e4f011a35e.patch | git apply -v # update watch icons
+          
       # Patch Fastlane Match to not print tables
       - name: Patch Match Tables
         run: |
